Changes since last push:
 - Now the player's sprite is displayed 
 - The center of view is now the center of the player, not the corner